Imported upstream version '0.1.3' of 'upstream'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,5 @@ project(roswww)
 find_package(catkin REQUIRED)
 catkin_package()
 catkin_python_setup()
+
+install(DIRECTORY script DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION} USE_SOURCE_PERMISSIONS)
