--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.1-0": ["Sat Dec 13 2014", "Isaac Isao Saito", "130s@lateeye.net"], "0.1.1-1": ["Sat Dec 13 2014", "Isaac Isao Saito", "130s@lateeye.net"]}
+{"0.1.1-0": ["Sat Dec 13 2014", "Isaac Isao Saito", "130s@lateeye.net"], "0.1.1-1": ["Sat Dec 13 2014", "Isaac Isao Saito", "130s@lateeye.net"], "0.1.1-2": ["Mon Jan 05 2015", "Isaac Isao Saito", "130s@lateeye.net"]}
