--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>roswww</name>
-  <version>0.1.3</version>
+  <version>0.1.4</version>
   <description>roswww package</description>
 
   <maintainer email="iisaito@opensource-robotics.tokyo.jp">Isaac Isao Saito</maintainer>
@@ -14,7 +14,8 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <run_depend>rosbridge_server</run_depend>
-  <run_depend>rospy</run_depend>
+  <run_depend>rosgraph</run_depend>
+  <run_depend>rospack</run_depend>
 
   <export/>
 </package>
