--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.3-0": ["Mon Jan 05 2015", "Isaac Isao Saito", "iisaito@opensource-robotics.tokyo.jp"], "0.1.4-0": ["Wed Jan 28 2015", "Isaac Isao Saito", "iisaito@opensource-robotics.tokyo.jp"]}
+{"0.1.5-0": ["Sat Feb 28 2015", "Isaac Isao Saito", "iisaito@opensource-robotics.tokyo.jp"], "0.1.3-0": ["Mon Jan 05 2015", "Isaac Isao Saito", "iisaito@opensource-robotics.tokyo.jp"], "0.1.4-0": ["Wed Jan 28 2015", "Isaac Isao Saito", "iisaito@opensource-robotics.tokyo.jp"]}
