--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6688040
+	base = ed2de6b
 	trimbase = 
 	parent = debian/jade/roswww
-	previous = 
+	previous = 6688040
