--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bc7d65c
+	base = 4992b5b
 	trimbase = 
 	parent = release/jade/roswww
-	previous = 
+	previous = bc7d65c
