Imported upstream version '0.1.6' of 'upstream'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(roswww)
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED rostest)
 catkin_package()
 catkin_python_setup()
 
@@ -10,6 +10,8 @@ install(
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
-install(DIRECTORY launch
+install(DIRECTORY launch test
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
+
+add_rostest(test/launch.test)
