--- a/package.xml
+++ b/package.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0"?>
 <package>
   <name>roswww</name>
-  <version>0.1.5</version>
-  <description>roswww package</description>
+  <version>0.1.6</version>
+  <description>Feathery lightweight web server for ROS, that is based on <a href = "http://www.tornadoweb.org/en/stable">Tornado</a> web server module.</description>
 
   <maintainer email="iisaito@opensource-robotics.tokyo.jp">Isaac Isao Saito</maintainer>
   <author>Jonathan Mace</author>
   <author email="jihoonl@yujinrobot.com">Jihoon Lee</author>
   <license>BSD</license>
   <url type="website">http://ros.org/wiki/roswww</url>
-  <url type="bugtracker">https://github.com/tork-a/roswww_pkg/issues</url>
-  <url type="repository">https://github.com/tork-a/roswww_pkg</url>
+  <url type="bugtracker">https://github.com/tork-a/roswww/issues</url>
+  <url type="repository">https://github.com/tork-a/roswww</url>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>python-catkin-pkg</build_depend>
+  <build_depend>rostest</build_depend>
   <run_depend>rosbridge_server</run_depend>
   <run_depend>rosgraph</run_depend>
   <run_depend>rospack</run_depend>
-
-  <export/>
+  <export>
+    <rosdoc config="rosdoc.yaml" />
+  </export>
 </package>
