--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ script:
   - catkin build --limit-status-rate 0.1 --no-notify -DCMAKE_BUILD_TYPE=Release
   # Build tests
   - catkin build --limit-status-rate 0.1 --no-notify --make-args tests
+  - source install/setup.bash
   # Run tests
   - catkin run_tests
   # check test (this only works on indigo onward)
