--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.5-0": ["Tue Oct 06 2015", "Isaac Isao Saito", "iisaito@opensource-robotics.tokyo.jp"], "0.1.6-0": ["Tue Dec 01 2015", "Isaac Isao Saito", "iisaito@opensource-robotics.tokyo.jp"]}
+{"0.1.5-0": ["Tue Oct 06 2015", "Isaac Isao Saito", "iisaito@opensource-robotics.tokyo.jp"], "0.1.6-0": ["Tue Dec 01 2015", "Isaac Isao Saito", "iisaito@opensource-robotics.tokyo.jp"], "0.1.7-0": ["Mon Dec 07 2015", "Isaac Isao Saito", "iisaito@opensource-robotics.tokyo.jp"]}
