--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>roswww</name>
-  <version>0.1.7</version>
+  <version>0.1.8</version>
   <description>Feathery lightweight web server for ROS, that is based on <a href = "http://www.tornadoweb.org/en/stable">Tornado</a> web server module.</description>
 
   <maintainer email="iisaito@opensource-robotics.tokyo.jp">Isaac Isao Saito</maintainer>
@@ -14,10 +14,10 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>python-catkin-pkg</build_depend>
-  <build_depend>rostest</build_depend>
   <run_depend>rosbridge_server</run_depend>
   <run_depend>rosgraph</run_depend>
   <run_depend>rospack</run_depend>
+  <test_depend>rostest</test_depend>
   <export>
     <rosdoc config="rosdoc.yaml" />
   </export>
