Rebase from 'upstream'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(roswww)
-find_package(catkin REQUIRED rostest)
+find_package(catkin REQUIRED)
 catkin_package()
 catkin_python_setup()
 
@@ -12,4 +12,7 @@ install(DIRECTORY launch test www
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION} USE_SOURCE_PERMISSIONS
 )
 
-add_rostest(test/launch.test)
+if (CATKIN_ENABLE_TESTING)
+  find_package(rostest REQUIRED)
+  add_rostest(test/launch.test)
+endif()
