--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e8fa8c7
+	base = 968956e
 	trimbase = 
 	parent = release/kinetic/roswww
-	previous = 
+	previous = e8fa8c7
