--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a22178c
+	base = 77d54bc
 	trimbase = 
 	parent = debian/kinetic/roswww
-	previous = 
+	previous = a22178c
