--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 881427c
+	base = ccda465
 	trimbase = 
 	parent = debian/kinetic/roswww
-	previous = 
+	previous = 881427c
