--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 91bbeb0
+	base = 73b4410
 	trimbase = 
 	parent = rpm/kinetic/roswww
-	previous = 
+	previous = 91bbeb0
