--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1a7edc9
+	base = 1c25b5e
 	trimbase = 
 	parent = release/melodic/roswww
-	previous = 
+	previous = 1a7edc9
