--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 758ff7a
+	base = 4e635ca
 	trimbase = 
 	parent = debian/melodic/roswww
-	previous = 
+	previous = 758ff7a
