--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 30a4101
+	base = 0132eda
 	trimbase = 
 	parent = debian/melodic/roswww
-	previous = 
+	previous = 30a4101
