--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2639349
+	base = c9d6508
 	trimbase = 
 	parent = rpm/melodic/roswww
-	previous = 
+	previous = 2639349
