--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b160ea9
+	base = 6d2774a
 	trimbase = 
 	parent = release/noetic/roswww
-	previous = 
+	previous = b160ea9
