--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8442168
+	base = 8e0ef88
 	trimbase = 
 	parent = debian/noetic/roswww
-	previous = 
+	previous = 8442168
