--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0997689
+	base = f3c839c
 	trimbase = 
 	parent = debian/noetic/roswww
-	previous = 
+	previous = 0997689
